--- a/project/seer/index.html
+++ b/project/seer/index.html
@@ -212,7 +212,56 @@
     </div>
   </div>
   <div class="blankHS"></div>
+  <div class="BGseer1_1">
+    <div class="blankHS"></div>
+    <!-- Arrow -->
+    <div class="wrapper">
+      <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+        <div class="Grid-cell">
+          <div class="element">
+            <div class="Grid">
+              <p class="tArrow"> SEER</p>
+              <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Arrow -->
+    <div class="blankHS"></div>
+    <div class="wrapper">
+      <div class="flex-container">
+        <div class="left-zone">
+          <ul class="list">
+            <li class="item">
+              <input type="radio" id="radio_testimonial-1" name="carousel" checked="checked" />
+              <label class="label_testimonial-1 SEER" for="radio_testimonial-1">Landing
+                page</label>
+              <div class="content-test">
+                <img class="shadowFilterL" src="Hi-fi_landing_short.svg" alt="team member">
+              </div>
+            </li>
+            <li class="item">
+              <input type="radio" id="radio_testimonial-2" name="carousel" />
+              <label class="label_testimonial-2 SEER" for="radio_testimonial-2">Dashboard</label>
+              <div class="content-test">
+                <img class="shadowFilterL" src="Hi-fi_main.svg" alt="Charts">
 
+              </div>
+            </li>
+ 
+   
+          </ul>
+        </div>
+        <div class="right-zone"></div>
+      </div>
+
+    </div>
+
+    <div class="blankHM"></div>
+
+
+  </div>
   <div class="BGseer2_1">
     <div class="blankHS"></div>
     <div class="wrapper">
