--- a/project/seer/index.html
+++ b/project/seer/index.html
@@ -228,6 +228,8 @@
       </div>
     </div>
     <!-- Arrow -->
+
+
     <div class="blankHS"></div>
     <div class="wrapper">
       <div class="flex-container">
@@ -258,10 +260,13 @@
 
     </div>
 
-    <div class="blankHM"></div>
+    <div class="blankHS"></div>
 
 
   </div>
+
+  <div class="blankHM"></div>
+
   <div class="BGseer2_1">
     <div class="blankHS"></div>
     <div class="wrapper">
