--- a/project/appointa/index.html
+++ b/project/appointa/index.html
@@ -158,7 +158,9 @@
     <div class="blankHS"></div>
      <div class="ProjectBanner">
       <div class="blankMin1880"></div>
-      <img class="" src="Mockup.png" alt="APPOINTA">
+      <img class="displayNoneDesktop" src="MockupS.png" alt="APPOINTA">
+      <img class="displayNonePhone" src="Mockup.png" alt="APPOINTA">
+
       <div class="ProjectBannerInner wrapper displayNonePhone">
         <div class="Grid Grid--gutters Grid--cols-3">
           <div class="Grid-cell">
