--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
 
-  <link rel="stylesheet" href="../main.css">
+  <link rel="stylesheet" href="./main.css">
   <script type="text/javascript" src="../scripts.js"></script>
   <script type="text/javascript" src="scripts_project.js"></script>
   <script type="text/javascript" src="../scripts_about.js"></script>
