--- a/architecture/index.html
+++ b/architecture/index.html
@@ -126,7 +126,7 @@
 
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="nav-item inactive "><a href="/project"
+          <li class="nav-item inactive "><a href="/"
               class="nav-link box font300-1080 ">PROJECT</a></li>
           <li class="nav-item active greenNav"><a href="/architecture"
               class="nav-link box">ARCHITECTURE</a>
@@ -134,7 +134,7 @@
           <li class="nav-item inactive "><a href="/photography"
               class="nav-link box font300-1080 ">PHOTOGRAPHY</a>
           </li>
-          <li class="nav-item inactive "><a href="/" class="nav-link box font300-1080 ">ABOUT</a>
+          <li class="nav-item inactive "><a href="/about" class="nav-link box font300-1080 ">ABOUT</a>
           </li>
         </ul>
       </div>
