--- a/photography/index.html
+++ b/photography/index.html
@@ -128,7 +128,7 @@
 
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="nav-item inactive "><a href="/project"
+          <li class="nav-item inactive "><a href="/"
               class="nav-link box font300-1080">PROJECT</a></li>
           <li class="nav-item inactive"><a href="/architecture"
               class="nav-link box font300-1080">ARCHITECTURE</a>
@@ -136,7 +136,7 @@
           <li class="nav-item active greenNav"><a href="/photography"
               class="nav-link box">PHOTOGRAPHY</a>
           </li>
-          <li class="nav-item inactive"><a href="/" class="nav-link box font300-1080">ABOUT</a></li>
+          <li class="nav-item inactive"><a href="/about" class="nav-link box font300-1080">ABOUT</a></li>
         </ul>
       </div>
 
