links and fonts

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
 
   <link rel="stylesheet" href="./main.css">
-  <script type="text/javascript" src="../scripts.js"></script>
+  <script type="text/javascript" src="scripts.js"></script>
   <script type="text/javascript" src="scripts_project.js"></script>
-  <script type="text/javascript" src="../scripts_about.js"></script>
+  <script type="text/javascript" src="./about/scripts_about.js"></script>
 
 
   <link
@@ -181,14 +181,14 @@
     <div class="Grid Grid--gutters Grid--cols-3">
       <div class="Grid-cell">
         <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank">
-          <img class="intro-logo" src="../icon/in.svg" alt="linkedin">
+          <img class="intro-logo" src="./icon/in.svg" alt="linkedin">
         </a>
         <a href="https://github.com/vicky-wyq" target="_blank">
-          <img class="intro-logo" src="../icon/git.svg" alt="github">
+          <img class="intro-logo" src="./icon/git.svg" alt="github">
         </a>
 
         <a href="https://www.instagram.com/vw_yiqi/" target="_blank">
-          <img class="intro-logo" src="../icon/ins.svg" alt="medium">
+          <img class="intro-logo" src="./icon/ins.svg" alt="medium">
         </a>
       </div>
     </div>
@@ -217,7 +217,7 @@
         <div class="element">
           <div class="Grid">
             <p class="tArrow"> Most Recent Projects</p>
-            <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+            <img class="se-arrow" src="./icon/arrow-se.svg" alt="se-arrow">
           </div>
         </div>
       </div>
@@ -229,11 +229,11 @@
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
-        <a href="/project/appointa/">
+        <a href="/appointa/">
           <div class="element">
 
             <div class="elementCard float cardBorder APPOINTA">
-              <img src="../image/Cover_APPOINTA.jpg" alt="Appointa">
+              <img src="./image/Cover_APPOINTA.jpg" alt="Appointa">
               <div class="element">
                 <div class="element">
                   <h5>For scheduling interview</h5>
@@ -248,11 +248,11 @@
         </a>
       </div>
       <div class="Grid-cell">
-        <a href="/project/seer/">
+        <a href="/seer/">
           <div class="element">
 
             <div class="elementCard float cardBorder SEER">
-              <img src="../image/Cover_SEER.jpg" alt="ANARE">
+              <img src="./image/Cover_SEER.jpg" alt="ANARE">
               <div class="element">
                 <div class="element">
                   <h5>For grow business</h5>
@@ -282,7 +282,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow"> Work Sample </p>
-        <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+        <img class="se-arrow" src="./icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
@@ -294,7 +294,7 @@
         <div class="element">
           <div class="elementInner float cardBorder elementCard">
             <div class="img__wrap">
-              <img class="img__img" src="../image/layout_worksample.png" />
+              <img class="img__img" src="./image/layout_worksample.png" />
               <div class="img__description">
                 <div class="input-field">
                   <input type="password" id="password" placeholder="password">
@@ -326,7 +326,7 @@
         <div class="element">
           <div class="Grid">
             <p class="tArrow"> Other Projects</p>
-            <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+            <img class="se-arrow" src="./icon/arrow-se.svg" alt="se-arrow">
           </div>
         </div>
       </div>
@@ -338,9 +338,9 @@
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-3">
       <div class="Grid-cell">
-        <a href="/project/gardeners_hub/">
+        <a href="/gardeners_hub/">
           <div class="elementCard float cardBorder">
-            <img src="../image/layout_GardenersHub.png" alt="Gardeners Hub">
+            <img src="./image/layout_GardenersHub.png" alt="Gardeners Hub">
             <div class="element">
               <div class="element">
                 <h5>For Gardeners</h5>
@@ -355,9 +355,9 @@
       </div>
 
       <div class="Grid-cell">
-        <a href="/project/appointment_maker/">
+        <a href="/appointment_maker/">
           <div class="elementCard float cardBorder">
-            <img src="../image/layout_AppointmentMaker.png" alt="Make appointment">
+            <img src="./image/layout_AppointmentMaker.png" alt="Make appointment">
             <div class="element">
               <div class="element">
                 <h5>For makeing appointment</h5>
@@ -370,9 +370,9 @@
         </a>
       </div>
       <div class="Grid-cell">
-        <a href="/project/meal_planner/">
+        <a href="/meal_planner/">
           <div class="elementCard float cardBorder">
-            <img src="../image/layout_MealPlanner.png" alt="Meal Planner">
+            <img src="./image/layout_MealPlanner.png" alt="Meal Planner">
             <div class="element">
               <div class="element">
                 <h5 class="">For plan meal</h5>
@@ -395,7 +395,7 @@
   <div class="blankHL"></div>
   <!--back to top-->
   <button id="myBtn" class=" myBtn-1550" title="Go to top">
-    <img id="bottom-arrow" class="ArrowHover" src="../icon/arrow-top.svg" alt="back to top">
+    <img id="bottom-arrow" class="ArrowHover" src="./icon/arrow-top.svg" alt="back to top">
     <div>TOP</div>
   </button>
   <!--back to top-->
@@ -407,19 +407,19 @@
       </p>
       <div class="footer-right">
         <a href="mailto:vickyw.design@gmail.com">
-          <img class="footer-logo" src="../icon/mail.svg" alt="email">
+          <img class="footer-logo" src="./icon/mail.svg" alt="email">
         </a>
 
         <a href="https://www.linkedin.com/in/vicky-wyq/">
-          <img class="footer-logo" src="../icon/in.svg" alt="linkedin">
+          <img class="footer-logo" src="./icon/in.svg" alt="linkedin">
         </a>
 
         <a href="https://github.com/vicky-wyq">
-          <img class="footer-logo" src="../icon/git.svg" alt="github">
+          <img class="footer-logo" src="./icon/git.svg" alt="github">
         </a>
 
         <a href="https://www.instagram.com/vw_yiqi/">
-          <img class="footer-logo" src="../icon/ins.svg" alt="medium">
+          <img class="footer-logo" src="./icon/ins.svg" alt="medium">
         </a>
       </div>
     </div>
