--- a/seer/index.html
+++ b/seer/index.html
@@ -43,8 +43,8 @@
 
 
   <link rel="stylesheet" href="../../main.css">
-  <script type="text/javascript" src="../../scripts.js"></script>
-  <script type="text/javascript" src="../scripts_project.js"></script>
+  <script type="text/javascript" src="../scripts.js"></script>
+  <script type="text/javascript" src="scripts_project.js"></script>
 
   <link
     href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
@@ -131,13 +131,13 @@
       </a>
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="nav-item active seer"><a href="/project" class="nav-link box">PROJECT</a></li>
+          <li class="nav-item active seer"><a href="/" class="nav-link box">PROJECT</a></li>
           <li class="nav-item inactive "><a href="/architecture"
               class="nav-link box">ARCHITECTURE</a>
           </li>
           <li class="nav-item inactive "><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
           </li>
-          <li class="nav-item inactive "><a href="/" class="nav-link box">ABOUT</a></li>
+          <li class="nav-item inactive "><a href="/about" class="nav-link box">ABOUT</a></li>
         </ul>
       </div>
       <div class="hamburger">
