--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     </div>
   </div>
   <!-- Arrow -->
-  <div class="blankHM"></div>
+  <div class="blankHS"></div>
   <!-- projects ongoing -->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
