--- a/index.html
+++ b/index.html
@@ -192,6 +192,8 @@
         </a>
       </div>
     </div>
+    <div class="blankHXS"></div>
+
     <div class="Grid Grid--gutters Grid--1of6">
 
       <div class="Grid-cell">
