--- a/appointa/index.html
+++ b/appointa/index.html
@@ -185,7 +185,8 @@
           </div>
           <div class="Grid-cell ">
             <div class="heightM">
-              <a href="/resume.pdf" target="_blank"> <button class="button-35">View case
+              <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=496%2C498%2C0.37&scaling=scale-down&starting-point-node-id=1714%3A9456"
+                target="_blank"> <button class="button-35">View case
                   study</button></a>
             </div>
           </div>
