--- a/seer/index.html
+++ b/seer/index.html
@@ -157,24 +157,32 @@
       <div class="blankMin1880"></div>
       <img class="displayNoneDesktop" src="MockupS.png" alt="SEER">
       <img class="displayNonePhone" src="Mockup.png" alt="SEER">
-      <div class="ProjectBannerInner wrapper displayNonePhone">
-        <div class="Grid Grid--gutters Grid--cols-3">
+      <div class="ProjectBannerInner displayNonePhone">
+        <div class="Grid Grid--gutters Grid--cols-4 Grid--top">
           <div class="Grid-cell">
-            <div class="element">
-              <h5 class=""><strong class="">Duration:</strong> August 2022</h5>
+            <div class="element heightS">
+              <h5 class=""><strong class="">Duration:</strong> June -
+                August 2022</h5>
             </div>
           </div>
           <div class="Grid-cell">
-            <div class="element">
+            <div class="element heightS">
               <h5 class=""><strong class="">Role:</strong> Product
                 strategy &#124; Research &#124; Visual</h5>
             </div>
           </div>
           <div class="Grid-cell">
-            <div class="element">
+            <div class="element heightS">
               <h5 class=""><strong class="">Tool:</strong> Figma | VS
                 Code
               </h5>
+            </div>
+          </div>
+          <div class="Grid-cell ">
+            <div class="heightM">
+              <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=496%2C498%2C0.37&scaling=scale-down&starting-point-node-id=1714%3A9456"
+                target="_blank"> <button class="button-35">View case
+                  study</button></a>
             </div>
           </div>
         </div>
