--- a/appointa/index.html
+++ b/appointa/index.html
@@ -186,8 +186,7 @@
           <div class="Grid-cell ">
             <div class="heightM">
               <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=496%2C498%2C0.37&scaling=scale-down&starting-point-node-id=1714%3A9456"
-                target="_blank"> <button class="button-35">View case
-                  study</button></a>
+                target="_blank"> <button class="button-35">Slide Decks</button></a>
             </div>
           </div>
         </div>
