--- a/seer/index.html
+++ b/seer/index.html
@@ -42,7 +42,7 @@
 
 
 
-  <link rel="stylesheet" href="../../main.css">
+  <link rel="stylesheet" href="../main.css">
   <script type="text/javascript" src="../scripts.js"></script>
   <script type="text/javascript" src="scripts_project.js"></script>
 
@@ -229,7 +229,7 @@
           <div class="element">
             <div class="Grid">
               <p class="tArrow"> SEER</p>
-              <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+              <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
             </div>
           </div>
         </div>
@@ -283,7 +283,7 @@
         <div class="element">
           <div class="Grid">
             <p class="tArrow"> Design thinking process</p>
-            <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+            <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
           </div>
         </div>
       </div>
@@ -356,7 +356,7 @@
       <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
         <div class="Grid-cell">
           <h1 class="Grid Grid--center"> <span>User research</span><img class="moveUpDown widthLogo"
-              src="../../icon/icon_research.svg" alt="Redesign">
+              src="../icon/icon_research.svg" alt="Redesign">
           </h1>
         </div>
       </div>
@@ -371,7 +371,7 @@
               <div class="element">
                 <div class="Grid">
                   <p class="tArrow"> Opportunity and use cases</p>
-                  <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                  <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
                 </div>
               </div>
             </div>
@@ -508,7 +508,7 @@
               <div class="element">
                 <div class="Grid">
                   <p class="tArrow">Survey &#38; Affinity Mapping</p>
-                  <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                  <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
                 </div>
               </div>
             </div>
@@ -567,7 +567,7 @@
               <div class="element">
                 <div class="Grid">
                   <p class="tArrow"> User journey</p>
-                  <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                  <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
                 </div>
               </div>
             </div>
@@ -605,7 +605,7 @@
                 <div class="element">
                   <div class="Grid">
                     <p class="tArrow"> Data from Reddit API</p>
-                    <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
                   </div>
                 </div>
               </div>
@@ -650,7 +650,7 @@
               <div class="element">
                 <div class="Grid">
                   <p class="tArrow"> How it works</p>
-                  <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                  <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
                 </div>
               </div>
             </div>
@@ -768,7 +768,7 @@
               <div class="element">
                 <div class="Grid">
                   <p class="tArrow"> Initial concepts</p>
-                  <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                  <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
                 </div>
               </div>
             </div>
@@ -897,7 +897,7 @@
       <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
         <div class="Grid-cell">
           <h1 class="Grid Grid--center"> <span>Design, test, iterate</span><img
-              class="moveUpDown widthLogo" src="../../icon/icon_Redesign.svg" alt="Redesign">
+              class="moveUpDown widthLogo" src="../icon/icon_Redesign.svg" alt="Redesign">
           </h1>
         </div>
       </div>
@@ -909,7 +909,7 @@
               <div class="element">
                 <div class="Grid">
                   <p class="tArrow"> Lo-fi wireframes</p>
-                  <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                  <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
                 </div>
               </div>
             </div>
@@ -950,7 +950,7 @@
               <div class="element">
                 <div class="Grid">
                   <p class="tArrow"> Mid-fi screen screens</p>
-                  <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                  <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
                 </div>
               </div>
             </div>
@@ -1025,7 +1025,7 @@
               <div class="element">
                 <div class="Grid">
                   <p class="tArrow"> Usability testing</p>
-                  <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                  <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
                 </div>
               </div>
             </div>
@@ -1097,7 +1097,7 @@
               <div class="element">
                 <div class="Grid">
                   <p class="tArrow"> Update based on testing</p>
-                  <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                  <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
                 </div>
               </div>
             </div>
@@ -1130,7 +1130,7 @@
               <div class="element">
                 <div class="Grid">
                   <p class="tArrow"> Mid-fi adding details</p>
-                  <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                  <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
                 </div>
               </div>
             </div>
@@ -1178,7 +1178,7 @@
         <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
           <div class="Grid-cell">
             <h1 class="Grid Grid--center"> <span>Final solution</span><img
-                class="moveUpDown widthLogo" src="../../icon/icon_Redesign.svg" alt="Redesign">
+                class="moveUpDown widthLogo" src="../icon/icon_Redesign.svg" alt="Redesign">
             </h1>
           </div>
         </div>
@@ -1287,7 +1287,7 @@
                 <div class="element">
                   <div class="Grid">
                     <p class="tArrow"> Metrics</p>
-                    <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
                   </div>
                 </div>
               </div>
@@ -1368,7 +1368,7 @@
                 <div class="element">
                   <div class="Grid">
                     <p class="tArrow"> Hi-fi screens</p>
-                    <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
                   </div>
                 </div>
               </div>
@@ -1465,7 +1465,7 @@
 
     <div class="Grid Grid--full u-textCenter">
       <div class="Grid-cell">
-        <img id="bottom-arrow" class="ArrowHover" src="../../icon/arrow-top.svg" alt="back to top">
+        <img id="bottom-arrow" class="ArrowHover" src="../icon/arrow-top.svg" alt="back to top">
         <div>TOP</div>
       </div>
     </div>
@@ -1480,19 +1480,19 @@
       </p>
       <div class="footer-right">
         <a href="mailto:vickyw.design@gmail.com">
-          <img class="footer-logo" src="../../icon/mail.svg" alt="email">
+          <img class="footer-logo" src="../icon/mail.svg" alt="email">
         </a>
 
         <a href="https://www.linkedin.com/in/vicky-wyq/">
-          <img class="footer-logo" src="../../icon/in.svg" alt="linkedin">
+          <img class="footer-logo" src="../icon/in.svg" alt="linkedin">
         </a>
 
         <a href="https://github.com/vicky-wyq">
-          <img class="footer-logo" src="../../icon/git.svg" alt="github">
+          <img class="footer-logo" src="../icon/git.svg" alt="github">
         </a>
 
         <a href="https://www.instagram.com/vw_yiqi/">
-          <img class="footer-logo" src="../../icon/ins.svg" alt="medium">
+          <img class="footer-logo" src="../icon/ins.svg" alt="medium">
         </a>
       </div>
     </div>
