--- a/appointa/index.html
+++ b/appointa/index.html
@@ -157,34 +157,33 @@
   <div class="colorBgAPPOINTA">
     <div class="blankPhone"></div>
     <div class="blankHS"></div>
-    <div class="ProjectBanner">
+    <div class="ProjectBanner displayNonePhone">
       <div class="blankMin1880"></div>
-      <img class="displayNoneDesktop" src="MockupS.png" alt="APPOINTA">
-      <img class="displayNonePhone" src="Mockup.png" alt="APPOINTA">
+      <img class="" src="Mockup.png" alt="APPOINTA">
 
       <div class="ProjectBannerInner displayNonePhone">
         <div class="Grid Grid--gutters Grid--cols-4 Grid--top">
           <div class="Grid-cell">
-            <div class="element heightS">
+            <div class="element">
               <h5 class=""><strong class="">Duration:</strong> June -
                 August 2022</h5>
             </div>
           </div>
           <div class="Grid-cell">
-            <div class="element heightS">
+            <div class="element ">
               <h5 class=""><strong class="">Role:</strong> Product
                 strategy &#124; Research &#124; Visual</h5>
             </div>
           </div>
           <div class="Grid-cell">
-            <div class="element heightS">
+            <div class="element ">
               <h5 class=""><strong class="">Tool:</strong> Figma | VS
                 Code
               </h5>
             </div>
           </div>
           <div class="Grid-cell ">
-            <div class="heightM">
+            <div class="">
               <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=720%2C570%2C0.52&scaling=scale-down&starting-point-node-id=1714%3A9456"
                 target="_blank"> <button class="button-35">Slide Decks</button></a>
             </div>
@@ -192,6 +191,14 @@
         </div>
       </div>
     </div>
+    <div class="ProjectBanner displayNoneDesktop">
+      <div class="blankMin1880"></div>
+      <img class="displayNoneDesktop" src="MockupS.png" alt="APPOINTA">
+ 
+    </div>
+
+ 
+
 
   </div>
   <div class="blankHXS"></div>
@@ -425,7 +432,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="elementInner">
-                  <img class="IconCaseStudy" src="" alt="se-arrow">
+                  <img class="IconCaseStudy" src="../icon/icon_Testing.svg" alt="se-arrow">
 
                   <h3><strong>Questions</strong></h3>
                   <h4>What we do not know
