--- a/seer/index.html
+++ b/seer/index.html
@@ -160,26 +160,26 @@
       <div class="ProjectBannerInner displayNonePhone">
         <div class="Grid Grid--gutters Grid--cols-4 Grid--top">
           <div class="Grid-cell">
-            <div class="element heightS">
+            <div class="element">
               <h5 class=""><strong class="">Duration:</strong> June -
                 August 2022</h5>
             </div>
           </div>
           <div class="Grid-cell">
-            <div class="element heightS">
+            <div class="element">
               <h5 class=""><strong class="">Role:</strong> Product
                 strategy &#124; Research &#124; Visual</h5>
             </div>
           </div>
           <div class="Grid-cell">
-            <div class="element heightS">
+            <div class="element">
               <h5 class=""><strong class="">Tool:</strong> Figma | VS
                 Code
               </h5>
             </div>
           </div>
-          <div class="Grid-cell ">
-            <div class="heightM">
+          <div class="Grid-cell">
+            <div class="">
               <a href="https://www.figma.com/proto/X6ERoTDqPOY9rzJFA7IsKL/SEER?page-id=402%3A4188&node-id=402%3A4228&viewport=1099%2C670%2C0.19&scaling=scale-down&starting-point-node-id=402%3A4228"
                 target="_blank"> <button class="button-35-1">Slide Decks</button></a>
             </div>
