--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
           <li class="nav-item inactive "><a href="/photography"
               class="nav-link box font300-1080">PHOTOGRAPHY</a>
           </li>
-          <li class="nav-item inactive "><a href="/about" class="nav-link box font300-1080 ">ABOUT</a>
+          <li class="nav-item inactive "><a href="/about"
+              class="nav-link box font300-1080 ">ABOUT</a>
           </li>
         </ul>
       </div>
@@ -170,7 +171,8 @@
         </div>
 
         <div class="column">
-          <span class="t-me"> Design for business and consumer-facing websites with a small team.</span>
+          <span class="t-me"> Design for business and consumer-facing websites with a small
+            team.</span>
 
         </div>
 
@@ -194,21 +196,28 @@
     </div>
     <div class="blankHXS"></div>
 
-    <div class="Grid Grid--gutters Grid--1of6">
 
+
+    <div class="Grid Grid--gutters Grid--1of3 Grid--nested">
       <div class="Grid-cell">
-        <div class="elementButton">
-          <a href="/resume.pdf" target="_blank"> <button class="button-55">Resume</button></a>
+        <div class="">
+          <div class="Grid Grid--gutters Grid--nested">
+            <div class="Grid-cell"> <a href="/resume.pdf" target="_blank"> <button
+                  class="button-55">Resume</button></a>
+            </div>
+            <div class="Grid-cell"> <a href="/about"> <button class="button-55 arrButton">About
+                  me</button></a>
+            </div>
+
+
+          </div>
         </div>
       </div>
 
-      <div class="Grid-cell">
-        <div class="elementButton">
-          <a href="/about"> <button class="button-55 arrButton">About me</button></a>
-        </div>
-      </div>
+
 
     </div>
+
   </div>
   <!--intro-->
   <div class="blankHS"></div>
