--- a/index.html
+++ b/index.html
@@ -195,29 +195,13 @@
       </div>
     </div>
     <div class="blankHXS"></div>
-
-
-
-    <div class="Grid Grid--gutters Grid--1of3 Grid--nested">
+    <div class="Grid Grid--gutters Grid--cols-3">
       <div class="Grid-cell">
-        <div class="">
-          <div class="Grid Grid--gutters Grid--nested">
-            <div class="Grid-cell"> <a href="/resume.pdf" target="_blank"> <button
-                  class="button-55">Resume</button></a>
-            </div>
-            <div class="Grid-cell"> <a href="/about"> <button class="button-55 arrButton">About
-                  me</button></a>
-            </div>
+        <a href="/resume.pdf" target="_blank"> <button class="button-55 arrButton">Resume</button></a>
 
-
-          </div>
-        </div>
+        <a href="/about"> <button class="button-55 arrButton">About me</button></a>
       </div>
-
-
-
-    </div>
-
+    </div> 
   </div>
   <!--intro-->
   <div class="blankHS"></div>
