--- a/index.html
+++ b/index.html
@@ -197,9 +197,11 @@
     <div class="blankHXS"></div>
     <div class="Grid Grid--gutters Grid--cols-3">
       <div class="Grid-cell">
-        <a href="/resume.pdf" target="_blank"> <button class="button-55 arrButton">Resume</button></a>
+        <a href="/resume.pdf" target="_blank"> <button class="buttonLanding arrButtonResume">Resume &nbsp;
+        </button></a>
 
-        <a href="/about"> <button class="button-55 arrButton">About me</button></a>
+        <a href="/about"> <button class="buttonLanding arrButton">About me &nbsp;
+        </button></a>
       </div>
     </div> 
   </div>
