--- a/appointa/index.html
+++ b/appointa/index.html
@@ -42,7 +42,7 @@
 
   <link rel="stylesheet" href="../main.css">
   <script type="text/javascript" src="../scripts.js"></script>
-  <script type="text/javascript" src="scripts_project.js"></script>
+  <script type="text/javascript" src="../scripts_project.js"></script>
 
   <link
     href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
@@ -194,51 +194,65 @@
     <div class="ProjectBanner displayNoneDesktop">
       <div class="blankMin1880"></div>
       <img class="displayNoneDesktop" src="MockupS.png" alt="APPOINTA">
- 
+
     </div>
 
- 
+
 
 
   </div>
   <div class="blankHXS"></div>
 
-  <div class="Grid Grid--gutters Grid--cols-2 wrapper">
+  <div class="Grid Grid--gutters Grid--cols-3 wrapper">
     <div class="Grid-cell">
       <div class="element">
         <div class="elementInner">
 
           <h3><strong>Challenge</strong></h3>
-          <h4>On average, recruiters are spending two-thirds of their overall hiring process
-            on interview scheduling
+          <h4>The recruiter's primary focus is on finding qualified candidates for the open
+            position. However, recruiters are spending two-thirds of their overall hiring process on
+            interview scheduling on average.
           </h4>
-          <h4>The recruitment app and scheduling app they are currently using are not very efficient
-            for scheduling job interviews</h4>
+
         </div>
       </div>
     </div>
     <div class="Grid-cell">
       <div class="element">
-
         <div class="elementInner">
 
-          <h3><strong>Hypothesis</strong></h3>
-
-          <h4>If schedule and organize interviews with potential candidates more efficiently</h4>
-          <h4>It will improve recruiters’ processing time, reduce administrative tasks, and enhance
-            the overall candidate experience.
-          </h4>
+          <h3><strong>Goal</strong></h3>
+          <h4>Redefining the way recruiters arrange their appointments and invite attendees for
+            medium/large-sized business</h4>
 
         </div>
       </div>
     </div>
   </div>
-
-
-
-
-
   <div class="blankHM"></div>
+
+  <!-- Arrow -->
+  <div class="wrapper">
+    <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="Grid">
+            <p class="tArrow"> Timeline</p>
+            <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Arrow -->
+  <div class="blankHXS"></div>
+  <!-- uses cases -->
+  <div class="wrapper">
+ 
+    <img class="modal-target" src="diagram_timeline.svg" alt="Pain points">
+
+  </div>
+  <!-- uses cases -->
 
   <div class="colorBgAPPOINTA">
     <div class="blankHS"></div>
