--- a/seer/index.html
+++ b/seer/index.html
@@ -44,7 +44,7 @@
 
   <link rel="stylesheet" href="../main.css">
   <script type="text/javascript" src="../scripts.js"></script>
-  <script type="text/javascript" src="scripts_project.js"></script>
+  <script type="text/javascript" src="../scripts_project.js"></script>
 
   <link
     href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
