--- a/appointa/index.html
+++ b/appointa/index.html
@@ -815,6 +815,35 @@
           </div>
           <div class="blankHS"></div>
         </section>
+        <section id="priorityMatrix">
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="Grid">
+                    <p class="tArrow"> Priority matrix</p>
+                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="arrow">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="Grid">
+                    <img class="modal-target" src="diagram_priorityMatrix.svg" alt="Priority matrix">
+  
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="blankHS"></div>
+        </section>
       </div>
 
     </section>
