--- a/appointa/index.html
+++ b/appointa/index.html
@@ -398,7 +398,7 @@
 
         <li><a href="#ideation">Develop</a>
           <ul>
-            <li class=""><a href="#sitemap">IA|Sitemap</a></li>
+            <li class=""><a href="#informationArchitecture">information architecture</a></li>
 
             <li class=""><a href="#userFlow">User flow </a></li>
             <li class=""><a href="#features">Features </a></li>
@@ -857,7 +857,7 @@
           </h1>
         </div>
       </div>
-      <section id="sitemap">
+      <section id="informationArchitecture">
 
         <!-- Arrow -->
         <div class="wrapper">
@@ -865,7 +865,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="Grid">
-                  <p class="tArrow"> Sitemap</p>
+                  <p class="tArrow"> Information architecture</p>
                   <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
                 </div>
               </div>
@@ -878,7 +878,7 @@
         <div class="Grid Grid--full u-textCenter wrapper">
           <div class="Grid-cell">
             <div class="element">
-              <img class="shadowFilter modal-target" src="Sitemap.svg" alt="Sitemap">
+              <img class="shadowFilter modal-target" src="diagram_informationArchitecture.svg" alt="Sitemap">
             </div>
           </div>
         </div>
